--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -922,8 +922,7 @@ sub {
     border-color: #1fc0ef; }
 
 .map-itemImage {
-  background: image-url("parkour.jpg") no-repeat center;
-  background-size: cover;
+  background-color: rgba(0, 0, 0, 0.5);
   display: inline-block;
   position: absolute;
   height: 100%;
@@ -932,8 +931,8 @@ sub {
   border-radius: 4px 0 0 4px; }
 
 .map-itemImage > img {
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
 }
 .map-itemContent {
   font-family: "pt-sans", Arial, "Helvetica Neue", Helvetica, sans-serif;
