--- a/app/views/glyphs/show.html.erb
+++ b/app/views/glyphs/show.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, @glyph.title) %>
-<section class="glyphHeader-image"><%= image_tag @glyph.header_image.url if @glyph.header_image? %></section>
+<section class="glyphHeader-image" <% if @glyph.header_image? %> style="background: url(<%= @glyph.header_image.url %>) no-repeat center; background-size: cover;"<% end %>></section>
 
 <section class="glyphSidebar">
   <div class="glyphSidebar-location">
