Activate cancel button on new glyph view, route to root.

--- a/app/views/glyphs/_glyph_form.html.erb
+++ b/app/views/glyphs/_glyph_form.html.erb
@@ -33,7 +33,7 @@
   </select>
   <span class="glyphInfo-dropdownText">can see this.</span>
   <section class="action">
-    <span class="action-secondary" id="cancelComment">Cancel</span>
+    <%= link_to "Cancel", root_url, class: "action-secondary" %>
     <%= f.submit class: "action-primary" %>
   </section>
 
