--- a/app/assets/stylesheets/feed.css.scss
+++ b/app/assets/stylesheets/feed.css.scss
@@ -51,6 +51,7 @@ $gray-medium-light: #eaeaea;
   color: $gray-medium-light;
   display: block;
   text-align: right;
+  font-size: 0.85rem;
 }
 
 .glyphFeed-tagline {
