--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,39 @@
 // Place all the styles related to the Users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+$gray-medium-light: #eaeaea;
+.stats {
+  overflow: auto;
+  margin-top: 0;
+  padding: 0;
+  a {
+    float: left;
+    padding: 0 10px;
+    border-left: 1px solid $gray-medium-light;
+    color: gray;
+    &:first-child {
+      padding-left: 0;
+      border: 0;
+    }
+    &:hover {
+      text-decoration: none;
+      color: #f7ca0a;
+    }
+  }
+  strong {
+    display: block;
+  }
+}
+
+@media screen and (max-width: 800px) {
+
+  .stats {
+    position: relative;
+    margin: auto;
+    min-height: 4.5rem;
+    min-width: 12.5rem;
+    width: 20vw;
+  }
+
+}
