--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,6 +7,18 @@
       <%= @user.username %>
     </div>
   </div>
+  <section class="stats">
+    <%= render 'stats' %>
+  </section>
+  <% unless current_user?(@user) %>
+  <div id="follow_form">
+    <% if current_user.following?(@user) %>
+      <%= render 'unfollow' %>
+    <% else %>
+      <%= render 'follow' %>
+    <% end %>
+  </div>
+  <% end %>
 </section>
 <section class="glyphInfo">
   <% if @user.glyphs.any? %>
