Complete feed incorporating followed users' glyphs.

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -37,3 +37,8 @@ $gray-medium-light: #eaeaea;
   }
 
 }
+
+.unfollow {
+  background-color: #ddd !important;
+  border-color: rgba(73, 73, 71, 0.5) !important;
+}
