--- a/app/views/glyphs/show.html.erb
+++ b/app/views/glyphs/show.html.erb
@@ -18,7 +18,7 @@
 <section class="glyphInfo">
   <header class="glyphInfo-text">
     <h2 class="glyphInfo-textTitle"><%= @glyph.title %></h2>
-    <span class="glyphInfo-textCreator">by <%= @glyph.user.username %></span>
+    <span class="glyphInfo-textCreator">by <%= link_to @glyph.user.username, @glyph.user %></span>
   </header>
   <h3 class="glyphInfo-heading"><%= @glyph.tagline %></h3>
   <div class="glyphInfo-content">
