--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,3 +1,16 @@
+/** Lightbox images **/
+
+.glyph-Lightbox {
+  max-width: 400px;
+  max-height: 400px;
+  border: 1px solid #ddddd9;
+  border-radius: 5px;
+}
+
+.glyph-Lightbox:hover {
+  border: 1px solid #aaa;
+}
+
 /** Link styling **/
 
 .feature-Link {
