--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -7,7 +7,7 @@
     <%= comment.text %>
     <br>
     <% if comment.image_attachment? %>
-      <a href="<%= comment.image_attachment.url %>" data-lightbox="glyph-image"><%= image_tag comment.image_attachment.url, class: "glyph-Lightbox" %></a>
+      <a href="<%= comment.image_attachment.url %>" data-lightbox="glyph-image"><%= image_tag comment.image_attachment.url, class: "glyph-Lightbox-small" %></a>
     <% end %>
   </div>
   <% if current_user?(comment.user) %>
