--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,8 +1,10 @@
 <li class="glyphComments-item">
   <section class="glyphComments-authorImage">
+  <%= link_to(comment.user) do %>
     <img class="glyphFeed-Image" src="<%= gravatar_url_for comment.user, size: 300 %>">
+  <% end %>
   </section>
-  <aside class="glyphComments-author"><%= comment.user.username %></aside>
+  <aside class="glyphComments-author"><%= link_to comment.user.username, comment.user %></aside>
   <div class="glyphComments-content">
     <%= comment.text %>
     <br>
