Change title of user marker to 'You are here'

--- a/app/assets/javascripts/maps.js.erb
+++ b/app/assets/javascripts/maps.js.erb
@@ -73,7 +73,7 @@ window.Glyphbase.Maps = (function() {
   };
 
   function addUserMarker(latitude, longitude) {
-    var markerTitle = 'I might be here';
+    var markerTitle = 'You are here';
     var image = {
         url: "<%= asset_path 'bluedot.png' %>",
         size: null, // size
