Update homepage text.

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -32,8 +32,8 @@
 </section>
 
 <section class="homeContent">
-  <h2 class="homeContent-tagline">Glyphbase helps you explore new spots.</h2>
-  <p class="homeContent-info">Skate ipsum dolor sit amet, airwalk launch ramp risers locals full pipe 50-50 slide Bonite. Coffin launch ramp nose darkslide Memory Screen slam quarter pipe full-cab.</p>
+  <h2 class="homeContent-tagline">Annotate Your World</h2>
+  <p class="homeContent-info">Glyphbase was designed to examine the intimate relationship between people and the places where we live, play, and work.  Location provides context for all of our content.  Look around, explore your world, and share that experience with others.</p>
 
   <% if !logged_in? %>
     <%= link_to signup_path do %>
