--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -33,7 +33,7 @@
 
 <section class="homeContent">
   <h2 class="homeContent-tagline">Annotate Your World</h2>
-  <p class="homeContent-info">Glyphbase was designed to examine the intimate relationship between people and the places where we live, play, and work.  Location provides context for all of our content, tying digital data to the analog environment around us.  So get out, explore, and share your experience by adding a glyph to our database or by joining a conversation around an existing glyph.</p>
+  <p class="homeContent-info">Glyphbase was designed to examine the intimate relationship between people and the places where we live, play, and work.  We tie digital data to the analog world around us and make it available only to individuals who have visited the physical location where it was placed.</p>
 
   <% if !logged_in? %>
     <%= link_to signup_path do %>
