Remove video button from view.

--- a/app/views/glyphs/_glyph_form.html.erb
+++ b/app/views/glyphs/_glyph_form.html.erb
@@ -24,7 +24,7 @@
         <%= f.file_field :image_attachment, accept: 'image/png,image/gif,image/jpeg,image/jpg' %>
       </div>
     </div>
-    <i class="input-textboxAction--video"></i>
+<!--     <i class="input-textboxAction--video"></i> -->
   </section>
 
   <select class="input-dropdown">
