Update homepage call to action.

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -33,7 +33,7 @@
 
 <section class="homeContent">
   <h2 class="homeContent-tagline">Annotate Your World</h2>
-  <p class="homeContent-info">Glyphbase was designed to examine the intimate relationship between people and the places where we live, play, and work.  We tie digital data to the analog world around us and make it available only to individuals who have visited the physical location where it was placed.</p>
+  <p class="homeContent-info">Glyphbase examines the intimate relationship between people and the places where we live, play, and work.  Glyphs are digital graffiti, linked to the physical location where they were placed and accessible only by those who venture there.</p>
 
   <% if !logged_in? %>
     <%= link_to signup_path do %>
