--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@
   <%= yield %>
 
   <footer class="footer">
-      <span class="footer-content">Footer Content</span>
+      <%= render 'layouts/footer' %>
   </footer>
 
 </body>
