--- a/app/views/glyphs/_comment_form.html.erb
+++ b/app/views/glyphs/_comment_form.html.erb
@@ -1,13 +1,16 @@
 <%= form_for [@glyph, @comment], html: { multipart: true }, role: "form" do |f| %>
+
+  <%= f.hidden_field :panda_video_id %>
   <%= render 'shared/error_messages', object: f.object %>
-  <%= f.text_area :text, class: "input-textbox", placeholder: "Omg this spot was sooo sick.", required: true%>
+  <%= f.text_area :text, class: "input-textbox", placeholder: "Place your comment here", required: true%>
   <section class="input-textboxActions">
     <div class="input-textboxAction--photo">
       <div class="fileButtonWrapper">
         <%= f.file_field :image_attachment, accept: 'image/png,image/gif,image/jpeg' %>
       </div>
     </div>
-    <i class="input-textboxAction--video"></i>
+    <i id="comments-panda-button" class="input-textboxAction--video"></i>
+    <span id="progress-bar"></span>
   </section>
   <section class="action">
     <span class="action-secondary" id="cancelComment">Cancel</span>
@@ -15,6 +18,7 @@
   </section>
 <% end %>
 
+<script src="//cdn.pandastream.com/u/2.3/panda-uploader.min.js"></script>
 <script type="text/javascript">
   $('#comment_image_attachment').bind('change', function() {
     size_in_megabytes = this.files[0].size/1024/1024;
@@ -23,6 +27,24 @@
     }
     if(this.files[0]) {
       $(this).closest('.input-textboxAction--photo').addClass('has-file');
+    }
+  });
+
+  var upl = panda.uploader.init({
+    'buttonId': 'comments-panda-button',
+    'fileDropId': "file-drop",
+    'onQueue': function(files) {
+      $('#progress-bar').text("One moment. Uploading...");
+    },
+    'onProgress': function(file, percent) {
+      $('#progress-bar').text(percent + "%");
+    },
+    'onSuccess': function(file, data) {
+      $("#comment_panda_video_id").val(data.id)
+      $('#progress-bar').text("Done: " + data.original_filename);
+    },
+    'onComplete': function(){
+      console.log("Complete!");
     }
   });
 </script>
