--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,6 @@
 <% provide(:title, 'Sign up') %>
 <section class="homeContent">
-  <br>
-  <h2 class="homeContent-tagline">Sign Up!</h2>
+  <h2 class="homeContent-taglineForms">Sign Up!</h2>
   <%= render "user_form" %>
 
   <p>Have an account? <%= link_to "Login here", login_path, class: 'feature-Link' %></p>
