--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,10 +2,10 @@
 <div class="bar">
   <div class="bar-wrap">
     <ul class="links"> <!-- footer menu -->
-      <li><a href="#">Home</a></li>
+      <li><%= link_to "Home", root_url %></li>
       <li><a href="#">FAQs</a></li>
       <li><a href="#">Contact Us</a></li>
-      <li><a href="#">About</a></li>
+      <li><%= link_to "About", about_url %></li>
     </ul>
 
     <div class="social">
